--- a/about.html
+++ b/about.html
@@ -12,6 +12,10 @@
         <link href="assets/css/jquery-ui.min.css" rel="stylesheet" type="text/css">
         <link href="assets/css/animate.css" rel="stylesheet" type="text/css">
         <link href="assets/css/css-plugin-collections.css" rel="stylesheet"/>
+
+        <!-- CSS | Style css. This is the file where you can place your own custom css code. Just uncomment it and use it. -->
+        <link href="assets/css/style.css" rel="stylesheet" type="text/css">
+
         <!-- CSS | menuzord megamenu skins -->
         <link id="menuzord-menu-skins" href="assets/css/menuzord-skins/menuzord-rounded-boxed.css" rel="stylesheet"/>
         <!-- CSS | Main style file -->
