--- a/index.html
+++ b/index.html
@@ -67,49 +67,73 @@
       </div>
 
       <header id="header" class="header">
-        <div class="header-top bg-black sm-text-center text-end border-top-theme-color-3px p-0">
+        <div class="header-top bg-black-333 sm-text-center border-top-theme-color-3px p-0">
           <div class="container">
             <div class="row">
-              <div class="col-md-12 p-10 pb-0">
+              <div class="col-md-4">
                 <div class="widget no-border m-0">
-                  <div id="google_translate_element"></div>
+                  <ul class="list-inline xs-text-center text-white mt-5">
+                    <li class="m-0 pl-10 pr-10"> <a href="#" class="text-white"><i class="fa fa-phone text-theme-colored"></i>  301-858-3148</a> </li>
+                    <li class="m-0 pl-10 pr-10"> 
+                      <a href="#" class="text-white"><i class="fa fa-envelope-o text-theme-colored"></i>  info@joannecbenson.com</a> 
+                    </li>
+                  </ul>
                 </div>
+              </div>
+              <div class="col-md-4 pr-0">
+                <div class="widget no-border m-0">
+                  <ul class="styled-icons icon-dark icon-flat icon-sm pull-right flip sm-pull-none sm-text-center mt-sm-15">
+                    <li><a href="#"><i class="fa fa-facebook text-white"></i></a></li>
+                    <li><a href="#"><i class="fa fa-twitter text-white"></i></a></li>
+                    <li><a href="#"><i class="fa fa-google-plus text-white"></i></a></li>
+                    <li><a href="#"><i class="fa fa-instagram text-white"></i></a></li>
+                    <li><a href="#"><i class="fa fa-linkedin text-white"></i></a></li>
+                  </ul>
+
+                </div>
+              </div>
+              <div class="col-md-2">
+                <a class="btn btn-colored btn-flat btn-theme-colored pb-10 ajaxload-popup" href="volunteer-form.html">Volunteer</a>
+              </div>
+              <div class="col-md-1">
+                <div id="google_translate_element"></div>
               </div>
             </div>
           </div>
         </div>
-            <div class="header-nav zet-index ">
-              <div class="header-nav-wrapper navbar-scrolltofixed bg-white header-content">
-                  <nav id="menuzord-right" class="menuzord default take-flags-back">
-                    <a class=" pull-left flip xs-pull-center mt-5 pl-md-100 pl-sm-50 pl-xs-0 pl-lg-200" href="#">
-                      <img src="assets/images/logo.png" alt="">
-                    </a>
-                    <ul class="menuzord-menu pt-20 pr-md-100 pr-lg-200">
-                      <li class="active">
-                        <a href="#">Home</a>
-                      </li>
-                      <li><a href="#">About</a>
-                        <ul class="dropdown">
-                          <li><a href="about.html">Biography</a></li>
-                          <li><a href="#">District 24</a></li>
-                          <li><a href="#">Democratic Party</a></li>
-                        </ul>
-                      </li>
-                      <li>
-                        <a href="#">Resources</a>
-                      </li>
-                      <li>
-                        <a href="#">Scholarships</a>
-                      </li>
-                      <li>
-                        <a href="#">Events</a>
-                      </li>
-                      <li><a href="#">Gallery</a>
-                      </li>
+        <div class="header-nav zet-index ">
+          <div class="header-nav-wrapper navbar-scrolltofixed bg-white header-content">
+              <nav id="menuzord-right" class="menuzord default take-flags-back">
+                <a class=" pull-left flip xs-pull-center mt-5 pl-md-100 pl-sm-50 pl-xs-0 pl-lg-200" href="#">
+                  <img src="assets/images/logo.png" alt="">
+                </a>
+                <ul class="menuzord-menu pt-20 pr-md-100 pr-lg-200">
+                  <li class="active">
+                    <a href="#">Home</a>
+                  </li>
+                  <li><a href="#">About</a>
+                    <ul class="dropdown">
+                      <li><a href="about.html">Biography</a></li>
+                      <li><a href="#">District 24</a></li>
+                      <li><a href="#">Democratic Party</a></li>
                     </ul>
-                  </nav>
-              </div>
-            </div>
+                  </li>
+                  <li>
+                    <a href="#">Resources</a>
+                  </li>
+                  <li>
+                    <a href="#">Scholarships</a>
+                  </li>
+                  <li>
+                    <a href="#">Events</a>
+                  </li>
+                  <li><a href="#">Gallery</a>
+                  </li>
+                </ul>
+              </nav>
+          </div>
+          
+        </div>
       </header>
       
       <div class="main-content">
@@ -505,7 +529,7 @@
                     and has been appointed to the Metropolitan Washington Council of Governments. She also is a member of the Women Legislators of 
                     Maryland and serves as Chaplain of the Legislative Black Caucus of Maryland.
                   </p>
-                  <a href="#" class="btn btn-theme-colored btn-default hvr-icon-wobble-horizontal">Read More</a>
+                  <a href="about.html" class="btn btn-theme-colored btn-default hvr-icon-wobble-horizontal">Read More</a>
                 </div>
                 <div class="col-md-6 wow fadeInRight" data-wow-duration="1s" data-wow-delay="0.3s">
                   <img class="img-fullwidth mt-sm-40" src="assets/images/sen-benson-front.jpg" alt="">
@@ -762,7 +786,6 @@
     <script type="text/javascript" src="assets/js/revolution-slider/js/extensions/revolution.extension.slideanims.min.js"></script>
     <script type="text/javascript" src="assets/js/revolution-slider/js/extensions/revolution.extension.video.min.js"></script>
 
-    <script type="module" src="/main.js"></script>
     <script type="text/javascript">
       function googleTranslateElementInit() {
         new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
