added white color logo

--- a/index.html
+++ b/index.html
@@ -691,7 +691,7 @@
           <div class="row border-bottom-black">
             <div class="col-sm-6 col-md-4">
               <div class="widget dark">
-                <img class="mt-10 mb-20" alt="" src="assets/images/logo.png">
+                <img class="mt-10 mb-20" alt="" src="assets/images/logo-white.png">
                 <p>P.O. BOX 4700 CAPITOL HEIGHTS, MD, 20791</p>
                 <ul class="list-inline mt-5">
                   <li class="m-0 pl-10 pr-10"> <i class="fa fa-phone text-theme-colored mr-5"></i> <a class="text-gray" href="#">301-858-3148</a> </li>
